--- a/.github/workflow/blogposts.yml
+++ b/.github/workflow/blogposts.yml
@@ -11,4 +11,4 @@ jobs:
       - uses: actions/checkout@v2
       - uses: hagenbauer/blog-post-workflow@master
         with:
-          feed_list: "https://www.hagen-bauer.de/github.rss"
+          feed_list: "https://www.hagen-bauer.de/social-feeds/github.xml"
